add cases.