@@ -1,9 +1,7 @@
 package com.walle.leetcode.normal;
 
 import java.util.ArrayList;
-import java.util.LinkedList;
 import java.util.List;
-import java.util.Stack;
 
 /*
 给定一个没有重复数字的序列，返回其所有可能的全排列。
@@ -12,20 +10,20 @@ public class LeetCode46_3 {
 
     public List<List<Integer>> permute(int[] nums) {
         List<List<Integer>> result = new ArrayList<>();
-        dfs(nums, result, new LinkedList<>());
+        dfs(nums, result, new ArrayList<>());
         return result;
     }
 
-    public void dfs(int[] nums, List<List<Integer>> result, LinkedList<Integer> list) {
+    public void dfs(int[] nums, List<List<Integer>> result, List<Integer> list) {
         if (nums.length == list.size()) {
-            result.add((List<Integer>)list.clone());
+            result.add(new ArrayList<>(list));
             return;
         }
         for (int j = 0; j < nums.length; ++j) {
             if (!list.contains(nums[j])) {
                 list.add(nums[j]);
                 dfs(nums, result, list);
-                list.removeLast();
+                list.remove(list.size() - 1);
             }
         }
     }
